PMD fixing..